feat: creating user controller
